--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,40 +1,58 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:weightSum="10"
     tools:context="com.SoftwareOverflow.CookingScheduler.HomeScreen">
 
     <ImageView
         android:id="@+id/homeScreenImageView"
-        android:layout_centerHorizontal="true"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="20dp"
-        android:src="@drawable/launcher"/>
+        android:layout_weight="9"
+        android:src="@drawable/launcher" />
+
 
     <LinearLayout
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_weight="0.75"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
+            android:padding="10dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:id="@+id/getPreviousTimings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="getTimings"
+            android:text="@string/get_recent_timings" />
+
+        <Button
+            android:padding="10dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="loadMeal"
+            android:text="@string/load_or_view_meal" />
+
+        <Button
+            android:padding="10dp"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="createMeal"
-            android:text="@string/home_screen_new"
-            android:layout_margin="10dp"/>
+            android:text="@string/home_screen_new" />
 
-        <Button
-            android:id="@+id/loadPreviousMeal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="createMeal"
-            android:text="@string/home_screen_load"
-            android:layout_margin="10dp"/>
     </LinearLayout>
 
-</RelativeLayout>
+
+</LinearLayout>
