--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -2,6 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.SoftwareOverflow.CookingScheduler.HomeScreen">
+
     <item android:id="@+id/reminders_menu_item" android:title="@string/upcoming_reminders"
         android:orderInCategory="1" app:showAsAction="never" />
+
+    <item android:id="@+id/upgrade_menu_item" android:title="@string/upgrade"
+        android:orderInCategory="2" app:showAsAction="never" />
+
+    <item android:id="@+id/show_saved_meals_menu_item" android:title="@string/show_saved_meals_menu_item"
+        android:orderInCategory="3" app:showAsAction="never"/>
+
 </menu>
