--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,13 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
     <style name="homeScreenTheme" parent="Theme.AppCompat.Light"></style>
 
-    <style name="showTimingTVL">
-        <item name="android:layout_marginLeft">20dp</item>
+
+
+    <style name="title">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">130dp</item>
-        <item name="android:gravity">center</item>
     </style>
 </resources>
