--- a/app/src/main/res/layout/lv_item_stage.xml
+++ b/app/src/main/res/layout/lv_item_stage.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:weightSum="10">
 
     <TextView
@@ -16,7 +16,9 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_weight="7"
         android:gravity="center"
-        android:text="@string/lv_stage_name" />
+        android:padding="5dp"
+        android:text="@string/lv_stage_name"
+        android:textSize="18sp" />
 
     <View
         android:layout_width="1dp"
@@ -31,6 +33,8 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_weight="3"
-        android:text="@string/time" />
+        android:padding="5dp"
+        android:text="@string/time"
+        android:textSize="18sp" />
 
 </LinearLayout>
