--- a/app/src/main/res/layout/lv_item_stage.xml
+++ b/app/src/main/res/layout/lv_item_stage.xml
@@ -1,24 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lv_stage"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:weightSum="10">
+    android:weightSum="100"
+    android:gravity="bottom"
+    android:layout_gravity="bottom">
+
+    <ImageView
+        android:contentDescription="@string/reorder_handler"
+        android:clickable="true"
+        android:id="@+id/dragHandler"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="10"
+        android:src="@drawable/reorder_handler"/>
+
+    <TextView
+        android:id="@+id/stageNumberTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_weight="15"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/lv_stage_no"
+        android:textSize="18sp"
+        android:textColor="#4e4e4e"/>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="fill_parent"
+        android:background="@android:color/holo_blue_light" />
 
     <TextView
         android:id="@+id/stageName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_weight="7"
+        android:layout_weight="55"
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/lv_stage_name"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textColor="#4e4e4e"/>
 
     <View
         android:layout_width="1dp"
@@ -29,12 +61,13 @@
         android:id="@+id/stageTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_weight="3"
+        android:layout_weight="20"
         android:padding="5dp"
         android:text="@string/time"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textColor="#4e4e4e"/>
+
 
 </LinearLayout>
