--- a/app/src/main/res/layout/activity_upgrade_class.xml
+++ b/app/src/main/res/layout/activity_upgrade_class.xml
@@ -60,7 +60,7 @@
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/upgrade"/>
+        android:text="@string/upgrade_to_pro"/>
 
 </RelativeLayout>
 
