Included In App Billing to remove adverts

--- a/app/src/main/res/layout/activity_upgrade_class.xml
+++ b/app/src/main/res/layout/activity_upgrade_class.xml
@@ -54,7 +54,7 @@
     </LinearLayout>
 
     <Button
-        android:onClick="upgrade"
+        android:id="@+id/upgradeButton"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
