--- a/app/src/main/res/layout/dialog_ready_time.xml
+++ b/app/src/main/res/layout/dialog_ready_time.xml
@@ -137,6 +137,12 @@
             android:layout_marginStart="50dp"
             android:layout_gravity="center"
             />
-
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textStyle="italic"
+        android:text="@string/override_warning"/>
 </LinearLayout>
