--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="10"
-    tools:context="com.SoftwareOverflow.CookingScheduler.HomeScreen">
+    tools:context="com.SoftwareOverflow.CookingScheduler.HomeScreen"
+    android:id="@+id/activity_home_screen">
 
     <ImageView
         android:contentDescription="@string/logo"
@@ -22,11 +23,12 @@
 
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.75"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal">
 
 
         <Button
@@ -38,7 +40,7 @@
         <Button
             style="@style/Widget.HomeScreenButton"
             android:onClick="loadMeal"
-            android:text="@string/load_or_view_meal" />
+            android:text="@string/load_saved_meal" />
 
         <Button
             style="@style/Widget.HomeScreenButton"
