--- a/app/src/main/res/layout/activity_show_times.xml
+++ b/app/src/main/res/layout/activity_show_times.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.SoftwareOverflow.CookingScheduler.ShowTimes">
 
@@ -13,13 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/timing_screen_banner_ad"
-        />
+        ads:adUnitId="@string/timing_screen_banner_ad" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -53,18 +52,17 @@
             android:background="@android:color/holo_blue_dark" />
 
         <LinearLayout
-            android:weightSum="10"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="20dp"
-            >
+            android:weightSum="10">
 
             <TextView
-                android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="3"
                 android:gravity="center"
                 android:text="Start Cooking At:" />
 
@@ -74,10 +72,10 @@
                 android:background="@android:color/holo_green_dark" />
 
             <TextView
-                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
+                android:gravity="center"
                 android:text="What to Cook:" />
         </LinearLayout>
 
@@ -93,11 +91,23 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <Button
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="finished"
-            android:text="Finished" />
+            android:layout_gravity="center_horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save_meal"
+                android:onClick="saveMeal"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:onClick="finished"
+                android:text="@string/finished" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
