--- a/app/src/main/res/layout/activity_upgrade_class.xml
+++ b/app/src/main/res/layout/activity_upgrade_class.xml
@@ -46,6 +46,7 @@
             android:text="@string/status"/>
 
         <TextView
+            android:padding="10dp"
             android:id="@+id/statusTV"
             android:textSize="20sp"
             android:layout_width="wrap_content"
