--- a/app/src/main/res/layout/lv_show_times.xml
+++ b/app/src/main/res/layout/lv_show_times.xml
@@ -4,19 +4,21 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
+    android:gravity="center"
     android:weightSum="10">
 
     <TextView
         android:id="@+id/startTimeTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="3"
         android:gravity="center" />
 
     <View
         android:layout_width="1dp"
         android:layout_height="fill_parent"
-        android:background="@android:color/holo_blue_light" />
+        android:background="@android:color/holo_green_light" />
 
     <TextView
         android:id="@+id/startItemTV"
