--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,9 +17,8 @@
     
     <style name="Widget.HomeScreenButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:padding">10dp</item>
-        <item name="android:backgroundTint">@color/darkgreen</item>
 
 
     </style>
