--- a/app/src/main/res/layout/activity_show_times.xml
+++ b/app/src/main/res/layout/activity_show_times.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_show_times"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -35,13 +36,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Food will be ready at " />
+                android:text="@string/food_ready_at" />
 
             <TextView
                 android:id="@+id/readyTimeTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="13:00"
+                android:layout_margin="5dp"
                 android:textSize="25sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -64,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="Start Cooking At:" />
+                android:text="@string/start_cooking_at" />
 
             <View
                 android:layout_width="1dp"
@@ -76,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
                 android:gravity="center"
-                android:text="What to Cook:" />
+                android:text="@string/what_to_cook" />
         </LinearLayout>
 
         <View
@@ -92,20 +93,25 @@
             android:layout_weight="1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:weightSum="2">
 
             <Button
-                android:layout_width="wrap_content"
+                style="@style/Widget.AppCompat.ButtonBar"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/save_meal"
-                android:onClick="saveMeal"/>
+                android:layout_weight="1"
+                android:onClick="saveMeal"
+                android:text="@string/save_meal" />
 
             <Button
-                android:layout_width="wrap_content"
+                style="@style/Widget.AppCompat.ButtonBar"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:onClick="finished"
                 android:text="@string/finished" />
         </LinearLayout>
