--- a/app/src/main/res/layout/dialog_reminders.xml
+++ b/app/src/main/res/layout/dialog_reminders.xml
@@ -69,7 +69,8 @@
         android:layout_marginBottom="25dp"
         android:id="@+id/alarmListView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
     </ListView>
 
     <LinearLayout
