--- a/app/src/main/res/layout/lv_item_stage.xml
+++ b/app/src/main/res/layout/lv_item_stage.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:weightSum="100"
-    android:gravity="bottom"
+    android:gravity="center_vertical"
     android:layout_gravity="bottom">
 
     <ImageView
@@ -18,6 +18,7 @@
         android:src="@drawable/reorder_handler"/>
 
     <TextView
+        android:layout_gravity="center_vertical"
         android:id="@+id/stageNumberTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
